--- a/doanasp/doanasp/Views/Shared/_LayoutAdminIndex.cshtml
+++ b/doanasp/doanasp/Views/Shared/_LayoutAdminIndex.cshtml
@@ -42,7 +42,7 @@
         <div id="top-header">
             <div class="container">
                 <ul class="header-links pull-right">
-                    <li><a asp-controller="Accounts" asp-action="Login"><i class="fa fa-user-o"></i>@RenderSection("name")</a></li>
+                    <li><a><i class="fa fa-user-o"></i>@RenderSection("name")</a></li>
                     @RenderSection("Member")
                 </ul>
             </div>
