--- a/doanasp/doanasp/Views/Accounts/EditProfile.cshtml
+++ b/doanasp/doanasp/Views/Accounts/EditProfile.cshtml
@@ -8,11 +8,11 @@
         username = ViewBag.UserName;
         Id = ViewBag.id;
         @section Member{<li><a asp-controller="Accounts" asp-action="Logout">Logout</a></li>};
-        @section name{<li><a asp-controller="Accounts" asp-action="iaccount"><i class="fa fa-user-o"></i>@username</a></li> }
+        @section name{<li><a asp-controller="Accounts" asp-action="iaccount">@username</a></li> }
     }
     else
     {
-        @section name{<li><a asp-controller="Accounts" asp-action="login"><i class="fa fa-user-o"></i></a></li> }
+        @section name{@username}
         @section Member{};
     }
 
@@ -63,9 +63,16 @@
                 <input class="form-check-input" asp-for="IsAdmin" /> @Html.DisplayNameFor(model => model.IsAdmin)
             </label>
         </div>
+        <div class="form-group form-check">
+            <label class="form-check-label">
+                Current Image
+                <img style=" max-width:200px ; max-height:200px ; border-radius:10%;" src="~/img/user_images/@Html.DisplayFor(model =>model.Avatar)" />
+            </label>
+        </div>
+       
         <div class="form-group">
-            <label asp-for="Avatar" class="control-label"></label>
-            <input asp-for="Avatar" type="file" class="form-control" />
+            <label asp-for="ImageFile" class="control-label"></label>
+            <input asp-for="ImageFile" type="file" class="form-control" />
             <span asp-validation-for="Avatar" class="text-danger"></span>
         </div>
         <div class="form-group form-check">
@@ -78,4 +85,4 @@
             <input class="btn btn-primary profile-button" type="submit" value="Save" />
 
         </div>
-        </form>
+    </form>
