--- a/doanasp/doanasp/Views/Home/Index.cshtml
+++ b/doanasp/doanasp/Views/Home/Index.cshtml
@@ -8,10 +8,12 @@
         username = ViewBag.UserName;
         Id = ViewBag.id;
         @section Member{<li><a asp-controller="Accounts" asp-action="Logout">Logout</a></li>};
+        @section name{   <li><a asp-controller="Accounts" asp-action="iaccount">@username</a></li>  }
     }
     else
     {
         @section Member{};
+        @section name{@username }
     }
 
     if (ViewBag.id != null)
@@ -23,7 +25,7 @@
 @section idWish{@Id}
 @section id{@Id}
 
-@section name{@username}
+
 
 <nav id="navigation">
     <!-- container -->
@@ -63,7 +65,6 @@
             </div>
             <!-- /shop -->
             <!-- shop -->
-
             <!-- /shop -->
         </div>
         <!-- /row -->
@@ -102,22 +103,22 @@
                                 {
 
                                     <!-- product -->
-                                <div class="product">
-                                    <a asp-controller="Products" asp-action="Detail" asp-route-id="@item.Id">
-                                        <div class="product-img">
-                                            <img src="~/img/product/@item.Image" alt="" width="100" height="200">
-                                        </div>
-                                        <div class="product-body">
-                                            <p class="product-category">@item.ProductType.TypeName</p>
-                                            <h3 class="product-name"><a asp-controller="Products" asp-action="Detail" asp-route-id="@item.Id">@item.Name</a></h3>
-                                            <h4 class="product-price">@item.Price VND</h4>
+                                    <div class="product">
+                                        <a asp-controller="Products" asp-action="Detail" asp-route-id="@item.Id">
+                                            <div class="product-img">
+                                                <img src="~/img/product/@item.Image" alt="" width="100" height="200">
+                                            </div>
+                                            <div class="product-body">
+                                                <p class="product-category">@item.ProductType.TypeName</p>
+                                                <h3 class="product-name"><a asp-controller="Products" asp-action="Detail" asp-route-id="@item.Id">@item.Name</a></h3>
+                                                <h4 class="product-price">@item.Price VND</h4>
 
-                                        </div>
-                                    </a>
+                                            </div>
+                                        </a>
                                         <div class="add-to-cart">
                                             <button class="add-to-cart-btn"><i class="fa fa-shopping-cart"></i> <a asp-controller="Carts" asp-action="Add" asp-route-id="@item.Id">add to cart </a></button>
                                         </div>
-                                </div>
+                                    </div>
                                     <!-- /product -->
                                 }
 
