--- a/doanasp/doanasp/Views/Products/Detail.cshtml
+++ b/doanasp/doanasp/Views/Products/Detail.cshtml
@@ -7,12 +7,13 @@
     if (ViewBag.UserName != null)
     {
         username = ViewBag.UserName;
-        Id = ViewBag.id;
         @section Member{<li><a asp-controller="Accounts" asp-action="Logout">Logout</a></li>}
+        @section name{   <li><a >@username</a></li>  }
     }
     else
     {
         @section Member{}
+        @section name{@username}
     }
 
     if (ViewBag.id != null)
@@ -24,7 +25,6 @@
 @section idWish{@Id}
 @section id{@Id}
 
-@section name{@username}
 
 <body>
     <!-- /NAVIGATION -->
@@ -40,7 +40,7 @@
                 <div class="col-md-5 col-md-push-2">
                     <div id="product-main-img">
                         <div class="product-preview">
-                            <img src="~/img/@Model.Image" alt="">
+                            <img src="~/img/product/@Model.Image" alt="">
                         </div>
                     </div>
                 </div>
@@ -49,7 +49,7 @@
                 <div class="col-md-2  col-md-pull-5">
                     <div id="product-imgs">
                         <div class="product-preview">
-                            <img src="~/img/@Model.Image" alt="">
+                            <img src="~/img/product/@Model.Image" alt="">
                         </div>
                     </div>
                 </div>
