--- a/doanasp/doanasp/Views/Carts/CartUser.cshtml
+++ b/doanasp/doanasp/Views/Carts/CartUser.cshtml
@@ -26,7 +26,7 @@
 
 
 
-<div class="column" style="width:50%">
+<div  class="column" style="width:50% ;  margin-left:10%;">
     <table class="table">
         <thead>
             <tr>
@@ -40,13 +40,13 @@
                     @Html.DisplayNameFor(model => model.Product.SKU)
                 </th>
                 <th>
-                    @Html.DisplayNameFor(model => model.Product.Name)
-                </th>
-                <th>
                     @Html.DisplayNameFor(model => model.Quantity)
                 </th>
                 <th>
                     @Html.DisplayNameFor(model => model.Product.Price)
+                </th>
+                <th>
+                    Function
                 </th>
                 <th></th>
             </tr>
@@ -57,14 +57,14 @@
             {
                 <tr>
                     <td>
-                        <img src="~/img/@item.Product.Image" alt="Computer Man" style="width:72px;height:72px;">
+                        <img src="~/img/product/@item.Product.Image" alt="Computer Man" style="width:100px;height:100px; border-radius:10%;">
                     </td>
 
                     <td>
-                        @Html.DisplayFor(modelItem => item.Product.SKU)
+                        @Html.DisplayFor(modelItem => item.Product.Name)
                     </td>
                     <td>
-                        @Html.DisplayFor(modelItem => item.Product.Name)
+                        @Html.DisplayFor(modelItem => item.Product.SKU)
                     </td>
                     <td>
                         <div class="buttons_added">
@@ -84,7 +84,7 @@
         </tbody>
     </table>
 </div>
-<div class="row">
+<div class="row" class="column" style="width:50% ;  margin-left:10%;" >
     <div class="col-md-4">
         <div class="mb-3">Tổng Tiền: @ViewBag.CartsTotal.ToString("#,##0") VND</div>
         <div class="form-group">
