--- a/doanasp/doanasp/Views/Invoices/SearchAdvanced.cshtml
+++ b/doanasp/doanasp/Views/Invoices/SearchAdvanced.cshtml
@@ -1,14 +1,26 @@
 ﻿@model doanasp.Models.Invoice;
 
 @{
-    ViewData["Title"] = "Create";
+    ViewData["Title"] = "Index"; Layout = "_LayoutAdminIndex";
+    string username = "anonymous";
+    if (ViewBag.UserName != null)
+    {
+        username = ViewBag.UserName;
+        @section Member{<li><a asp-controller="Accounts" asp-action="Logout">Logout</a></li>}
+    }
+    else
+    {
+        @section Member{}
+
+    }
 }
+@section name{@username}
 
-<h1>Search by Details</h1>
+<h1 style="width:50%; margin-left:10% ;">Search by Details</h1style="width:50%;>
 
-<h4>Invoice</h4>
+<h4 style="width:50%; margin-left:10% ;">Invoice</h4>
 <hr />
-<div class="row">
+<div class="row" style=" width:50%; margin-left:10%;">
     <div class="col-md-4">
         <form asp-action="Result">
             <div class="text-danger"></div>
@@ -17,9 +29,9 @@
                 <input name="Code" class="form-control" />
             </div>
             @*<div class="form-group">
-                <label class="control-label">IssueDate</label>
-                <input name="IssueDate" class="form-control" />
-            </div>*@
+                    <label class="control-label">IssueDate</label>
+                    <input name="IssueDate" class="form-control" />
+                </div>*@
             <div class="form-group">
                 <label class="control-label">ShippingAddress</label>
                 <input name="ShippingAddress" class="form-control" />
@@ -39,7 +51,7 @@
 
             <div class="form-group form-check">
                 <label class="form-check-label">
-                    
+
                     <input class="form-check-input" name="Status" asp-for="Status" />Delivered
                 </label>
             </div>
@@ -48,10 +60,10 @@
                 <input type="submit" value="Search" class="btn btn-primary" />
             </div>
         </form>
-</div>
+    </div>
 </div>
 
-<div>
+<div style="width:50%; margin-left:10% ;">
     <a asp-action="Index">Back to List</a>
 </div>
 
