--- a/doanasp/doanasp/Views/Invoices/Index.cshtml
+++ b/doanasp/doanasp/Views/Invoices/Index.cshtml
@@ -82,7 +82,7 @@
                         @Html.DisplayFor(modelItem => item.Total)
                     </td>
                     <td>
-                        @Html.DisplayFor(modelItem => item.AccountId)
+                        @Html.DisplayFor(modelItem => item.Account.Username)
                     </td>
                     @if (item.Status == false)
                     {
