--- a/doanasp/doanasp/Views/Shared/_LayoutAdminIndex.cshtml
+++ b/doanasp/doanasp/Views/Shared/_LayoutAdminIndex.cshtml
@@ -85,6 +85,7 @@
                 <li><a asp-controller="Carts" asp-action="index">Carts</a></li>
                 <li><a asp-controller="Invoices" asp-action="index">Invoices</a></li>
                 <li><a asp-controller="InvoiceDetails" asp-action="index">InvoiceDetails</a></li>
+                <li><a asp-controller="Comments" asp-action="index">Comments</a></li>
             </ul>
             <!-- /NAV -->
         </div>
