--- a/doanasp/doanasp/Views/Products/Index.cshtml
+++ b/doanasp/doanasp/Views/Products/Index.cshtml
@@ -27,7 +27,7 @@
                 <div class="header-search">
                     <form method="get" asp-controller="Products" asp-action="Name">
                         <div class="row">
-                            <input class="input" tyle="number" name="quantity" placeholder="Search here">&nbsp
+                            <input class="input" tyle="number" name="name" placeholder="Search here">&nbsp
                             <button class="btn btn-primary">Search</button>
                         </div>
 
