--- a/doanasp/doanasp/Views/InvoiceDetails/Delete.cshtml
+++ b/doanasp/doanasp/Views/InvoiceDetails/Delete.cshtml
@@ -46,7 +46,7 @@
                 @Html.DisplayNameFor(model => model.Product)
             </dt>
             <dd class="col-sm-10">
-                @Html.DisplayFor(model => model.Product.Author)
+                @Html.DisplayFor(model => model.Product.Name)
             </dd>
         </dl>
 
