--- a/doanasp/doanasp/Views/InvoiceDetails/Details.cshtml
+++ b/doanasp/doanasp/Views/InvoiceDetails/Details.cshtml
@@ -45,7 +45,7 @@
                 @Html.DisplayNameFor(model => model.Product)
             </dt>
             <dd class="col-sm-10">
-                @Html.DisplayFor(model => model.Product.Author)
+                @Html.DisplayFor(model => model.Product.Name)
             </dd>
         </dl>
     </div>
