--- a/doanasp/doanasp/Views/InvoiceDetails/Index.cshtml
+++ b/doanasp/doanasp/Views/InvoiceDetails/Index.cshtml
@@ -55,7 +55,7 @@
                         @Html.DisplayFor(modelItem => item.Invoice.id)
                     </td>
                     <td>
-                        @Html.DisplayFor(modelItem => item.Product.Author)
+                        @Html.DisplayFor(modelItem => item.Product.Name)
                     </td>
                     <td>
                         <a asp-action="Edit" asp-route-id="@item.id" class="btn btn-primary">Edit</a> |
